# xz-prefab

./: build.gradle  settings.gradle
xz/: build.gradle
xz/src/main/: AndroidManifest.xml
xz/src/main/xz/: CMakeLists.txt
